@@ -22,5 +22,5 @@
   <package id="Microsoft.Web.Xdt" version="2.1.1" targetFramework="net451" />
   <package id="MSBuildTasks" version="1.5.0.235" targetFramework="net451" developmentDependency="true" />
   <package id="Newtonsoft.Json" version="7.0.1" targetFramework="net452" allowedVersions="[7.0.1]" />
-  <package id="System.Diagnostics.DiagnosticSource" version="4.4.1" targetFramework="net452" />
+  <package id="System.Diagnostics.DiagnosticSource" version="4.4.0" targetFramework="net452" />
 </packages>
